--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 /* coded by SabWaFei */
-
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
 /* reset */
 * {
   margin: 0;
@@ -8,34 +8,105 @@
 }
 
 /* global styles */
+:root {
+  /* card backgrounds */
+  --clr-blue: hsl(246, 80%, 60%);
+  --clr-red-work: hsl(15, 100%, 70%);
+  --clr-blue-play: hsl(195, 74%, 62%);
+  --clr-light-red-study: hsl(348, 100%, 68%);
+  --clr-lime-green-exercise: hsl(145, 58%, 55%);
+  --clr-violet-social: hsl(264, 64%, 52%);
+  --clr-soft-orange-self-care: hsl(43, 84%, 65%);
+  /* neutral */
+  --clr-very-dark-blue: hsl(226, 43%, 10%);
+  --clr-dark-blue: hsl(235, 46%, 20%);
+  --clr-desaturated-blue: hsl(235, 45%, 61%);
+  --cler-pale-blue: hsl(236, 100%, 87%);
+  /* typography */
+  --ff-rubik: "Rubik", sans-serif;
+  --fw-light: 300;
+  --fw-medium: 400;
+  --fw-heavy: 500;
+}
+html {
+  font-family: var(--ff-rubik);
+  color: white;
+}
+h1 {
+  font-weight: var(--fw-light);
+}
+p {
+  font-weight: var(--fw-medium);
+}
+.type {
+  font-weight: var(--fw-heavy);
+}
+.inner {
+  background-color: var(--clr-dark-blue);
+}
+
 body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: var(--clr-very-dark-blue);
+
   /* desktop */
-  height: 100vh;
+  /* height: 100vh; */
   /* /desktop */
 }
 li {
   list-style: none;
 }
 .outer {
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
+  border-radius: 15px;
 }
 .inner {
+  border-radius: 15px;
   /* desktop */
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
+  /* border-top-right-radius: 15px;
+  border-top-left-radius: 15px; */
   /* desktop */
-  border-bottom-right-radius: 15px;
-  border-bottom-left-radius: 15px;
+  /* border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px; */
 }
 .icon {
   height: 80px;
   width: 80px;
 }
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+button {
+  text-transform: capitalize;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  display: inline-block;
+  font-family: var(--ff-rubik);
+  color: white;
+  font-weight: var(--fw-heavy);
+  opacity: 0.7;
+}
+
+/* meatball menu */
+.meatball-menu {
+  cursor: pointer;
+  width: 40px;
+  height: 20px;
+  transform: rotate(180deg);
+}
+.meatball-menu span {
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background: #fff;
+  opacity: 0.7;
+}
+/* /meatball menu */
 /* /global styles */
 
 /* utility classes */
@@ -48,9 +119,7 @@ li {
 .inner {
   position: relative;
   padding: 1em;
-  border: solid red 1px;
   margin-top: -30px;
-  background-color: lime;
 }
 /* /used to overlap */
 
@@ -58,16 +127,21 @@ li {
 
 /* main styling */
 .container {
-  width: 75%;
+  width: 90%;
+  margin-top: 2em;
+  /* width: 75%;
   display: grid;
   gap: 1.5em;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr); */
+}
+.card {
+  margin-top: 1em;
 }
 .profile {
   background-color: blue;
   /* desktop */
-  grid-row-start: 1;
-  grid-row-end: 3;
+  /* grid-row-start: 1;
+  grid-row-end: 3; */
   /* desktop */
 }
 .profile-pic {
@@ -87,22 +161,21 @@ li {
 }
 .two-outer {
   overflow: hidden;
-  background-color: lightseagreen;
 }
 .two-inner {
   /* used to overlap */
   position: relative;
   /* used to overlap */
   padding: 1em;
-  border: solid red 1px;
   margin-top: -30px;
-  background-color: lime;
 }
 
 footer {
+  color: white;
   text-align: center;
   font-family: sans-serif;
   margin-top: 2em;
+  margin-bottom: 2em;
   width: 90%;
 }
 /* /global styles */
