--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,11 +32,11 @@ html {
   font-family: var(--ff-rubik);
   color: white;
 }
-h1 {
+h2 {
   font-weight: var(--fw-light);
 }
 p {
-  font-weight: var(--fw-medium);
+  font-weight: var(--fw-light);
 }
 .type {
   font-weight: var(--fw-heavy);
@@ -106,11 +106,10 @@ button {
   background: #fff;
   opacity: 0.7;
 }
-/* /meatball menu */
-/* /global styles */
-
+.card {
+  margin-top: 1em;
+}
 /* utility classes */
-
 /* used to overlap */
 .outer {
   overflow: hidden;
@@ -121,9 +120,6 @@ button {
   padding: 1em;
   margin-top: -30px;
 }
-/* /used to overlap */
-
-/* /utility classes */
 
 /* main styling */
 .container {
@@ -134,19 +130,16 @@ button {
   gap: 1.5em;
   grid-template-columns: repeat(4, 1fr); */
 }
-.card {
-  margin-top: 1em;
-}
+
 .profile {
-  background-color: blue;
   /* desktop */
   /* grid-row-start: 1;
   grid-row-end: 3; */
   /* desktop */
 }
 .profile-pic {
-  height: 50px;
-  width: 50px;
+  height: 75px;
+  width: 75px;
   border: solid white 3px;
   border-radius: 35px;
 }
@@ -159,10 +152,35 @@ button {
   display: flex;
   justify-content: flex-end;
 }
+
+.one-inner {
+  border-radius: 15px;
+  padding-bottom: 1em;
+  background-color: var(--clr-dark-blue);
+}
+.one-outer {
+  border-radius: 15px;
+  background-color: var(--clr-blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5em;
+  gap: 1em;
+}
+.one-outer-right > p {
+  opacity: 0.7;
+}
+.sub-menu {
+  margin-top: 1em;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 .two-outer {
   overflow: hidden;
 }
 .two-inner {
+  /* might come back to this for easier solution */
   /* used to overlap */
   position: relative;
   /* used to overlap */
@@ -178,4 +196,3 @@ footer {
   margin-bottom: 2em;
   width: 90%;
 }
-/* /global styles */
