--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -37,6 +37,7 @@ h2 {
 }
 p {
   font-weight: var(--fw-light);
+  font-size: 0.8em;
 }
 .type {
   font-weight: var(--fw-heavy);
@@ -231,7 +232,7 @@ footer {
   .container {
     margin-top: 2em;
     display: grid;
-    gap: 1.5em;
+    gap: 0.7em;
     grid-template-columns: repeat(2, 1fr);
   }
   .profile {
@@ -264,5 +265,12 @@ footer {
     justify-content: flex-start;
     align-items: flex-start;
     gap: 0.8em;
+  }
+  .one-inner {
+    padding-bottom: 2em;
+  }
+  .inner-bottom {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
