--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -200,10 +200,15 @@ button {
   padding-bottom: 0.2em;
 }
 footer {
+  background-color: lightblue;
+  border: solid white 1px;
+  border-radius: 15px;
+  padding: 1.5em;
+  max-width: 20%;
   color: white;
   text-align: center;
   font-family: sans-serif;
-  margin-top: 2em;
+  margin-top: 1em;
   margin-bottom: 2em;
   width: 90%;
 }
@@ -232,6 +237,9 @@ footer {
     justify-content: center;
     align-items: center;
   }
+  footer {
+    max-width: 50%;
+  }
   .container {
     margin-top: 2em;
     display: grid;
@@ -246,6 +254,9 @@ footer {
 @media only screen and (min-width: 600px) {
   body {
     height: 100vh;
+  }
+  footer {
+    max-width: 40%;
   }
   .container {
     grid-template-columns: repeat(4, 1fr);
